# face-sdk-samples

./: CHANGELOG.md  README.md
android/: README.md
android/analysis/: settings.gradle
android/analysis-java/: settings.gradle
android/analysis-java/app/: build.gradle
android/analysis/app/: build.gradle
android/pad/: gradle.properties  settings.gradle
android/pad-java/: build.gradle  settings.gradle
android/pad-java/app/: build.gradle
android/pad/app/: build.gradle
android/portraitprocessor/: settings.gradle
android/portraitprocessor-java/: settings.gradle
android/portraitprocessor-java/app/: build.gradle
android/portraitprocessor/app/: build.gradle
android/recognition/: settings.gradle
android/recognition-camerax/: build.gradle  settings.gradle
android/recognition-camerax/app/: build.gradle
android/recognition-java/: build.gradle  settings.gradle
android/recognition-java/app/: build.gradle
android/tracking/: gradle.properties  settings.gradle
android/tracking-java/: settings.gradle
cpp/: CMakeLists.txt  README.md  build.bat  build.sh  id3FaceRecognitionSampleCLI.cpp  id3FaceRecognitionSampleCppCLI.cpp  id3PortraitProcessorSampleCLI.cpp  id3PortraitProcessorSampleCppCLI.cpp
dotnet/: README.md  id3.Face.Samples.sln
dotnet/id3.Face.Samples.CompressToWebpCLI/: Program.cs  id3.Face.Samples.CompressToWebpCLI.csproj
dotnet/id3.Face.Samples.PadWF/: App.config  Form1.Designer.cs  Form1.cs  Program.cs  id3.Face.Samples.PadWF.csproj  packages.config
dotnet/id3.Face.Samples.PortraitProcessorCLI/: Program.cs  id3.Face.Samples.PortraitProcessorCLI.csproj
dotnet/id3.Face.Samples.RecognitionCLI/: Program.cs  id3.Face.Samples.RecognitionCLI.csproj
dotnet/id3.Face.Samples.RecognitionWF/: App.config  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  id3.Face.Samples.RecognitionWF.csproj  packages.config
dotnet/id3.Face.Samples.RecognitionWPF1toN/: App.config  App.xaml  App.xaml.cs  FaceCanvas.cs  FaceColors.cs  FaceData.cs  FaceDatabase.cs  FaceDatabaseItem.cs  FaceTools.cs  ImageDrawing.cs  MainWindow.xaml  MainWindow.xaml.cs  PageDatabase.xaml  PageDatabase.xaml.cs  PageSearch.xaml  PageSearch.xaml.cs  id3.Face.Samples.RecognitionWPF1toN.csproj
flutter/: README.md  extract_ios_frameworks.sh
flutter/analysis_sample/: README.md  pubspec.yaml
flutter/benchmark_sample/: README.md  pubspec.yaml
flutter/id3_android_license/: README.md  pubspec.yaml
flutter/pad_sample/: README.md  pubspec.yaml
flutter/recognition_sample/: README.md  pubspec.yaml
java/: .gitignore  CompressToWebpCLI.java  PortraitProcessorCLI.java  README.md  RecognitionCLI.java  build.bat  build.sh
python/: README.md  face_analyse.py  face_pad.py  face_recognition.py  portrait_processor.py
swift/: README.md
(+253 files in other folders)
